--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -78,6 +78,7 @@ ul{
 	}
 	p:last-of-type{
 		padding-bottom: 110px;
+		margin-bottom: 0px;
 	}
 	a{
 				display: inline-block;
